# yolo-barcode-detector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml  mlflow.yaml
configs/data/: data.yaml
configs/infer/: infer.yaml
configs/model/: yolo.yaml
configs/train/: train.yaml
data/: test.dvc  train.dvc  val.dvc
detector/: commands.py
detector/data/: data_module.py  download.py  preprocess.py
detector/evaluation/: metrics.py
detector/inference/: predict.py
detector/models/: export.py  infer.py  train.py  yolo_model.py
detector/training/: train.py
detector/utils/: logger.py
