[tool.poetry]
name = "yolo-barcode-detection"
version = "0.1.0"
description = "Project for YOLO object detection"
authors = ["Svetlana Tkachenko <no.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.0"
pytorch-lightning = "^2.0.0"
hydra-core = "^1.3.0"
# dvc-sdk = "^2.50.0"
mlflow = "^2.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
opencv-python = "^4.9.0"
ultralytics = "^8.0.0"
fire = "^0.4.0"
numpy = "*"
scipy = "*"
omegaconf = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
