[tool.poetry]
name = "barcode-detector"
version = "0.1.0"
description = "Detection of 1D and 2D barcodes on photos"
authors = ["Your Name <your@email.com>"]
packages = [{include = "barcode_detector"}]

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.0.0"
opencv-python = "^4.8.0"
numpy = "^1.23"
scipy = "^1.11"
hydra-core = "^1.3"
mlflow = "^2.5"
fire = "^0.5"
dvc = "^3.0"
omegaconf = "^2.3"
# tensorrt = {version = "^8.6", optional = true}

[tool.poetry.dev-dependencies]
black = "^24.0"
isort = "^5.12"
flake8 = "^7.0"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
